add counter and update cmake

--- a/part1/CMakeLists.txt
+++ b/part1/CMakeLists.txt
@@ -3,3 +3,5 @@ project(drone)
 include_directories(inc)
 file(GLOB SOURCE "src/*.cpp" "inc/*.hh")
 add_executable(${PROJECT_NAME} ${SOURCE})
+SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++1z")
+add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})
